Footer shouldn't overlap top nav Fixes #78

--- a/project_tier/static/css/_footer.scss
+++ b/project_tier/static/css/_footer.scss
@@ -3,7 +3,7 @@
   color: $white;
   padding: $small-gutter 0 0;
   position: relative;
-  z-index: 3;
+  z-index: 2;
 
   #sponsor-logo {
     text-align: center;
